Fix problem with background-color property for the Collapse component

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -217,8 +217,6 @@ a {
 
 .collapse {
   width: 100%;
-  background-color: #f6f6f6;
-  border-radius: 5px;
 }
 .collapse-header {
   color: #fff;
@@ -271,6 +269,8 @@ a {
   color: #000;
   font-size: 12px;
   font-weight: 400;
+  border-radius: 5px;
+  margin-top: 1px;
   overflow: hidden;
   opacity: 0;
   transition: height 500ms ease-in-out, opacity 400ms ease-in-out 200ms;
@@ -280,11 +280,12 @@ a {
     font-size: 18px;
   }
 }
-.collapse-body p {
-  padding: 20px;
-}
 .collapse-body.open {
   opacity: 1;
+}
+.collapse-body-content {
+  padding: 20px;
+  background-color: #f6f6f6;
 }
 
 .list-reset {
