--- a/src/scss/components/_collapse.scss
+++ b/src/scss/components/_collapse.scss
@@ -3,8 +3,6 @@
 
 .collapse {
     width: 100%;
-    background-color: v.$collapse-body-bg-clr;
-    border-radius: 5px;
 
     &-header {
         color: v.$collapse-header-text-clr;
@@ -61,6 +59,8 @@
         color: v.$collapse-body-text-clr;
         font-size: map-get(v.$font-sizes, fs-300);
         font-weight: map-get(v.$font-weights, regular);
+        border-radius: 5px;
+        margin-top: 1px;
 
         overflow: hidden;
         opacity: 0;
@@ -73,12 +73,13 @@
             font-size: map-get(v.$font-sizes, fs-500);
         }
 
-        p {
-            padding: 20px;
-        }
-
         &.open {
             opacity: 1;
+        }
+
+        &-content {
+            padding: 20px;
+            background-color: v.$collapse-body-bg-clr;
         }
     }
 }
